--- a/GamerHQ/GamerHQ.csproj
+++ b/GamerHQ/GamerHQ.csproj
@@ -198,6 +198,8 @@
     <Content Include="Content\Assets\redbadgebackground.jpg" />
     <Content Include="Content\Assets\redbadgebackground2.jpg" />
     <Content Include="Content\Assets\redbadgebackground3.jpg" />
+    <Content Include="Content\Assets\redbadgebackground4.png" />
+    <Content Include="Content\Assets\redbadgebackground5jpg.jpg" />
     <Content Include="Content\bootstrap-Slate.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -367,6 +369,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\JoiningTablePartialView.cshtml" />
+    <Content Include="Views\User\UserEditPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
