bunch of front end changes

--- a/GamerHQ/GamerHQ.csproj
+++ b/GamerHQ/GamerHQ.csproj
@@ -195,10 +195,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Assets\redbadgebackground.jpg" />
-    <Content Include="Content\Assets\redbadgebackground2.jpg" />
-    <Content Include="Content\Assets\redbadgebackground3.jpg" />
-    <Content Include="Content\Assets\redbadgebackground4.png" />
+    <Content Include="Content\Assets\controllerimg.jpg" />
     <Content Include="Content\Assets\redbadgebackground5jpg.jpg" />
     <Content Include="Content\bootstrap-Slate.css" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -370,6 +367,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\JoiningTablePartialView.cshtml" />
     <Content Include="Views\User\UserEditPartial.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTimeOffset.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
